# strava_connector

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: docs.yml
notebooks/: main.ipynb
strava_connector/: __init__.py  authenticator.py  connector.py
strava_connector/utils/: logger.py
tests/: __init__.py  test_strava_connector.py
