[tool.poetry]
name = "strava_connector"
version = "0.2.2"
description = "Simple Strava client written in Python"
authors = ["Thomas Camminady <0milieux_member@icloud.com>"]
readme = "README.md"
homepage = "https://github.com/thomascamminady/strava_connector"
repository = "https://github.com/thomascamminady/strava_connector"
documentation = "https://camminady.dev/strava_connector/strava_connector/connector.html"


[tool.poetry.dependencies]
python = ">=3.9,<3.12"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"
mypy = "^1.9.0"
isort = "^5.13.2"
pyclean = "^3.0.0"
pre-commit = "^3.7.0"
ipykernel = "^6.29.4"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
regex = "^2023.12.25"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = [
  "D100",
  "D101",
  "D103",
  "D104",
  "D401",
  "E501",
  "N802", # Ignore camelCase errors
  "S106", # Ignore possible password exposure
  "N803", # Ignore camelCase errors
]
line-length = 80
select = [
    "B",
    "B9",
    "C",
    "D",
    "E",
    "F",
    "N",
    "S",
    "W",
    "I001",
]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.pylint.MASTER]
disable=[
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
]
